--- a/package.json
+++ b/package.json
@@ -46,6 +46,11 @@
     "lint-staged": "^11.0.0",
     "prettier": "2.3.0"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "*.{js,css,md,ts,tsx}": "prettier --write"
   }
