--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "husky": "^6.0.0",
     "json-server": "^0.16.3",
     "lint-staged": "^11.0.0",
-    "prettier": "2.3.0"
+    "prettier": "2.3.0",
+    "qs": "^6.10.1"
   },
   "husky": {
     "hooks": {
